@@ -2,8 +2,9 @@ package org.sagebionetworks.repo.manager.file.scanner;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
@@ -15,12 +16,12 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.sagebionetworks.repo.manager.UserManager;
 import org.sagebionetworks.repo.manager.file.FileHandleAssociationManager;
 import org.sagebionetworks.repo.model.AuthorizationConstants.BOOTSTRAP_PRINCIPAL;
-import org.sagebionetworks.repo.model.dbo.file.FileHandleDao;
 import org.sagebionetworks.repo.model.EntityType;
 import org.sagebionetworks.repo.model.IdRange;
 import org.sagebionetworks.repo.model.Node;
 import org.sagebionetworks.repo.model.NodeDAO;
 import org.sagebionetworks.repo.model.UserInfo;
+import org.sagebionetworks.repo.model.dbo.file.FileHandleDao;
 import org.sagebionetworks.repo.model.file.FileHandleAssociateType;
 import org.sagebionetworks.repo.model.helper.DaoObjectHelper;
 import org.sagebionetworks.repo.model.jdo.KeyFactory;
@@ -87,18 +88,18 @@ public class FileEntityFileScannerIntegrationTest {
 		Node node2 = createFileNode(folderId);
 		Node node3 = createFileNode(folderId);
 		
-		List<ScannedFileHandleAssociation> expected = Arrays.asList(
+		List<ScannedFileHandleAssociation> expected = List.of(
 			// First node has 3 revisions
-			new ScannedFileHandleAssociation(KeyFactory.stringToKey(node1.getId()), Long.valueOf(node1.getFileHandleId())),
-			new ScannedFileHandleAssociation(KeyFactory.stringToKey(node1.getId()), Long.valueOf(addRevision(node1).getFileHandleId())),
-			new ScannedFileHandleAssociation(KeyFactory.stringToKey(node1.getId()), Long.valueOf(addRevision(node1).getFileHandleId())),
+			getFileAssociation(node1),
+			getFileAssociation(addRevision(node1, false)),
+			getFileAssociation(addRevision(node1, false)),
 			
 			// Second node has only 1 revisions
-			new ScannedFileHandleAssociation(KeyFactory.stringToKey(node2.getId()), Long.valueOf(node2.getFileHandleId())),
+			getFileAssociation(node2),
 			
-			// Third node has 2 revisions
-			new ScannedFileHandleAssociation(KeyFactory.stringToKey(node3.getId()), Long.valueOf(node3.getFileHandleId())),
-			new ScannedFileHandleAssociation(KeyFactory.stringToKey(node3.getId()), Long.valueOf(addRevision(node3).getFileHandleId()))
+			// Third node has 2 revisions and a validation file handle on the second revision
+			getFileAssociation(node3),
+			getFileAssociation(addRevision(node3, true))
 		);
 		
 		IdRange range = manager.getIdRange(associationType);
@@ -117,14 +118,27 @@ public class FileEntityFileScannerIntegrationTest {
 			n.setParentId(parentId);
 			n.setNodeType(EntityType.file);
 			n.setFileHandleId(utils.generateFileHandle(user));
+			
 		});
 	}
 	
-	private Node addRevision(Node node) {
+	private Node addRevision(Node node, boolean withValidationFile) {
 		node.setFileHandleId(utils.generateFileHandle(user));
 		node.setVersionLabel("Revision_" + UUID.randomUUID().toString());
+		if (withValidationFile) {
+			node.setValidationResultFileHandleId(utils.generateFileHandle(user));
+		}
 		Long revision = nodeDao.createNewVersion(node);
 		return nodeDao.getNodeForVersion(node.getId(), revision);
+	}
+	
+	ScannedFileHandleAssociation getFileAssociation(Node node) {
+		Set<Long> fileHandleIds = new HashSet<>();
+		fileHandleIds.add(Long.valueOf(node.getFileHandleId()));
+		if (node.getValidationResultFileHandleId() != null) {
+			fileHandleIds.add(Long.valueOf(node.getValidationResultFileHandleId()));
+		}
+		return new ScannedFileHandleAssociation(KeyFactory.stringToKey(node.getId())).withFileHandleIds(fileHandleIds);
 	}
 
 }
