@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
@@ -12,6 +13,7 @@ import static org.mockito.Mockito.when;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Iterator;
 import java.util.List;
 
@@ -43,6 +45,8 @@ import org.sagebionetworks.repo.model.grid.DownloadFromGridRequest;
 import org.sagebionetworks.repo.model.grid.DownloadFromGridResult;
 import org.sagebionetworks.repo.model.grid.GridConnectionInfo;
 import org.sagebionetworks.repo.model.grid.GridSession;
+import org.sagebionetworks.repo.model.grid.patch.ConType;
+import org.sagebionetworks.repo.model.grid.patch.ConValue;
 import org.sagebionetworks.util.csv.CSVWriterProvider;
 
 import au.com.bytecode.opencsv.CSVWriter;
@@ -99,10 +103,10 @@ public class GridReplicaCsvExporterImplTest {
         rowViews = new ArrayList<>();
         rowViews.add(new RowView().setRowObject(new RowObject()
                 .setMetadata(new RowMetadata().setSynapseRow(new SynapseRow().setRowId(1L).setVersionNumber(2L).setEtag("etag1")))
-                .setData(new RowData().setCells(new JSONArray(List.of("a", "b"))))));
+                .setData(new RowData().setCells(Arrays.asList(new ConValue(ConType.STRING, "a"), new ConValue(ConType.STRING, "b"))))));
         rowViews.add(new RowView().setRowObject(new RowObject()
                 .setMetadata(new RowMetadata().setSynapseRow(new SynapseRow().setRowId(3L).setVersionNumber(4L).setEtag("etag2")))
-                .setData(new RowData().setCells(new JSONArray(List.of("c", "d"))))));
+                .setData(new RowData().setCells(Arrays.asList(new ConValue(ConType.STRING, "c"), new ConValue(ConType.STRING, "d"))))));
     }
 
     @Test
@@ -114,7 +118,7 @@ public class GridReplicaCsvExporterImplTest {
                 new Column().setName("col2")
         ));
         when(mockJobProgressCallback.getJobId()).thenReturn(jobId);
-        when(mockGridReplicaViewManager.getQueryIterator(eq(mockGridHeader), any())).thenReturn(mockRowViewIterator);
+        when(mockGridReplicaViewManager.getQueryIterator(eq(mockGridHeader), anyList())).thenReturn(mockRowViewIterator);
         when(mockRowViewIterator.hasNext()).thenReturn(true, true, false);
         when(mockRowViewIterator.next()).thenReturn(rowViews.get(0), rowViews.get(1));
         when(mockCsvWriterProvider.createWriter(any(), any())).thenReturn(mockCsvWriter);
@@ -151,7 +155,7 @@ public class GridReplicaCsvExporterImplTest {
                 new Column().setName("col2")
         ));
         when(mockJobProgressCallback.getJobId()).thenReturn(jobId);
-        when(mockGridReplicaViewManager.getQueryIterator(eq(mockGridHeader), any())).thenReturn(mockRowViewIterator);
+        when(mockGridReplicaViewManager.getQueryIterator(eq(mockGridHeader), anyList())).thenReturn(mockRowViewIterator);
         when(mockRowViewIterator.hasNext()).thenReturn(true, true, false);
         when(mockRowViewIterator.next()).thenReturn(rowViews.get(0), rowViews.get(1));
         when(mockCsvWriterProvider.createWriter(any(), any())).thenReturn(mockCsvWriter);
@@ -187,7 +191,7 @@ public class GridReplicaCsvExporterImplTest {
         when(mockGridManager.getGridSession(userInfo, sessionId)).thenReturn(mockGridSession);
         when(gridReplicaSupport.getGridHeaderOrThrow(mockGridSession)).thenReturn(mockGridHeader);
         when(mockJobProgressCallback.getJobId()).thenReturn(jobId);
-        when(mockGridReplicaViewManager.getQueryIterator(eq(mockGridHeader), any())).thenReturn(mockRowViewIterator);
+        when(mockGridReplicaViewManager.getQueryIterator(eq(mockGridHeader), anyList())).thenReturn(mockRowViewIterator);
         when(mockRowViewIterator.hasNext()).thenReturn(true, true, false);
         when(mockRowViewIterator.next()).thenReturn(rowViews.get(0), rowViews.get(1));
         when(mockCsvWriterProvider.createWriter(any(), any())).thenReturn(mockCsvWriter);
@@ -223,7 +227,7 @@ public class GridReplicaCsvExporterImplTest {
                 new Column().setName("col2")
         ));
         when(mockJobProgressCallback.getJobId()).thenReturn(jobId);
-        when(mockGridReplicaViewManager.getQueryIterator(eq(mockGridHeader), any())).thenReturn(mockRowViewIterator);
+        when(mockGridReplicaViewManager.getQueryIterator(eq(mockGridHeader), anyList())).thenReturn(mockRowViewIterator);
         when(mockRowViewIterator.hasNext()).thenReturn(true, true, false);
         when(mockRowViewIterator.next()).thenReturn(rowViews.get(0), rowViews.get(1));
         when(mockCsvWriterProvider.createWriter(any(), any())).thenReturn(mockCsvWriter);
@@ -259,7 +263,7 @@ public class GridReplicaCsvExporterImplTest {
                 new Column().setName("col2")
         ));
         when(mockJobProgressCallback.getJobId()).thenReturn(jobId);
-        when(mockGridReplicaViewManager.getQueryIterator(eq(mockGridHeader), any())).thenReturn(mockRowViewIterator);
+        when(mockGridReplicaViewManager.getQueryIterator(eq(mockGridHeader), anyList())).thenReturn(mockRowViewIterator);
         when(mockRowViewIterator.hasNext()).thenReturn(true, true, false);
         when(mockRowViewIterator.next()).thenReturn(rowViews.get(0), rowViews.get(1));
         when(mockCsvWriterProvider.createWriter(any(), any())).thenReturn(mockCsvWriter);
@@ -288,7 +292,7 @@ public class GridReplicaCsvExporterImplTest {
     @Test
     public void testExportGridAsCsvWithNullOrEmptyValues() throws IOException {
         rowViews.get(0).getRowObject().getMetadata().getSynapseRow().setRowId(null).setVersionNumber(null).setEtag(null);
-        rowViews.get(0).getRowObject().getData().setCells(new JSONArray("[\"a\",\"\"]"));
+        rowViews.get(0).getRowObject().getData().setCells(Arrays.asList(new ConValue(ConType.STRING, "a"), new ConValue(ConType.STRING, "")));
 
         when(mockGridManager.getGridSession(userInfo, sessionId)).thenReturn(mockGridSession);
         when(gridReplicaSupport.getGridHeaderOrThrow(mockGridSession)).thenReturn(mockGridHeader);
@@ -297,7 +301,7 @@ public class GridReplicaCsvExporterImplTest {
                 new Column().setName("col2")
         ));
         when(mockJobProgressCallback.getJobId()).thenReturn(jobId);
-        when(mockGridReplicaViewManager.getQueryIterator(eq(mockGridHeader), any())).thenReturn(mockRowViewIterator);
+        when(mockGridReplicaViewManager.getQueryIterator(eq(mockGridHeader), anyList())).thenReturn(mockRowViewIterator);
         when(mockRowViewIterator.hasNext()).thenReturn(true, true, false);
         when(mockRowViewIterator.next()).thenReturn(rowViews.get(0), rowViews.get(1));
         when(mockCsvWriterProvider.createWriter(any(), any())).thenReturn(mockCsvWriter);
